--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,21 +2,28 @@
 }
 
 body {
-    background-color: rgb(206, 230, 206);
+    background-color: rgb(255, 255, 255);
+    margin: 0;
+
 }
 
 h1 {
-    color:rgb(226,110,235);
+    text-align: center;
+    color:rgb(0 ,0 ,0);
+    margin: 0;
 }
 
 nav {text-align: center;}
+    nav a {
+        color: rgb(0, 0, 0);
+        margin: 2%;
+    }
+    nav li {
+        list-style: none;
+        display: inline;
+    }
 
-nav a {
-    color: rgb(0, 0, 0);
-    margin: 2%;
-}
-
-nav li {
-    list-style: none;
-    display: inline;
+header {
+    background-color: rgb(227, 158, 215);
+    margin: 0;
 }
