--- a/stylesheet.css
+++ b/stylesheet.css
@@ -38,14 +38,19 @@ header {
 }
 hr {
     margin: 0;
-    color: black;
+    background-color: rgb(0, 0, 0);
+    height: 2px;
+    border: 0;
 }
 img {
     width: 25%;
-    margin: 0;
-    padding-left: 0;
+    margin-left: -30px;
+
 }
 footer {
     margin: 0;
     padding-left: 30px;
+}
+h3 {
+    padding-bottom: 10px;
 }
