--- a/stylesheet.css
+++ b/stylesheet.css
@@ -75,7 +75,7 @@ a:visited {
 }
 
 a:hover {
-    color: rgb(231, 238, 207);
+ –≠≠≠≠   color: rgb(231, 238, 207);
 }
 a:active {
     color: rgb(236, 64, 113);
