--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,13 +3,38 @@
 *{font-family: 'Unbounded', cursive;
 }
 
+.text-column-left {
+    width: 40%;
+    padding-top: 2%;
+}
+
 .col-49 {
     width: 49%;
     float: left;
 }
 
+.list-text{
+    font-size: .8em;
+    line-height: 1.5em;
+}
+
+.text-columnn-left {
+    width: 55%;
+    float: right;
+    padding-top: 2%;
+}
+.paragraph {
+    line-height: 2em;
+
+}
+
+
+p.capitalize {
+    text-transform: uppercase;
+}
+
 #wrapper {
-    width: 100%;
+    width: 80%;
     margin:auto;
 }
 
@@ -17,12 +42,13 @@
     width: 100%;
     margin: auto;
     padding-top: 5%;
-    padding-bottom: 5%;
+    padding-bottom: 2%;
     background-color: rgb(227, 158, 215);
     text-align: center;
     background-image: url(images/foxface.png);
     background-repeat: repeat-x;
     background-size: 13%;
+    overflow: visible;
 
 }
 
@@ -46,29 +72,21 @@
     text-align: center;
 }
 
-#paragraph {
-    width: 50%;
-    margin: auto;
-}
 
 body {
     background-color: rgb(255, 255, 255);
-/*    margin: 0;
-*/
+
 }
 
 article {
     margin: 0;
-    padding-left: 30px;
 
 }
 
 h1 {
     text-align: center;
     color:rgb(0, 0, 0);
- /*   margin: 0;
- */
-    font-size: 5em;
+    font-size: 500%;
 }
 
 h3 {
@@ -76,7 +94,15 @@ h3 {
     padding-bottom: 1%;
 }
 
-nav {text-align: center;}
+nav {
+    text-align: center;
+    position: fixed;
+    top: 0%;
+    width: 100%;
+    background-color: rgb(248, 239, 106);
+    padding-top: 2%;
+    padding-bottom: 1%;
+}
     nav a {
         color: rgb(0, 0, 0);
         margin: 2%;
@@ -86,19 +112,6 @@ nav {text-align: center;}
         display: inline;
     }
 
- /*header {
-    background-color: rgb(227, 158, 215);
-    margin: 0;
-    padding-left: 30px;
-    padding-bottom: 10px;
-
-    text-align: center;
-    background-image: url(images/foxface.png);
-    background-repeat: repeat-x;
-    background-size: 10%;
-
-    /* background-blend-mode: multiply; */
-
 hr {
     clear: both;
     margin: 0;
@@ -107,18 +120,16 @@ hr {
     border: 0;
 }
 img {
-    width: 25%;
+    width: 40%;
     height: auto;
-    margin-left: -30px;
+    z-index: 100;
 
 }
     
 h3 {
     line-height: 2em;
 }
-p.capitalize {
-    text-transform: uppercase;
-}
+
 a:link {
     color:rgb(0, 0, 0);
     padding: 5px;
@@ -129,7 +140,7 @@ a:visited {
 }
 
 a:hover {
-   color: rgb(231, 238, 207);
+   color:  rgb(227, 158, 215)
 }
 a:active {
     color: rgb(236, 64, 113);
