--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,8 +9,9 @@
 }
 
 .col-49 {
-    width: 49%;
+    width: 47%;
     float: left;
+    padding-right: 2%;
 }
 
 .list-text{
@@ -18,7 +19,7 @@
     line-height: 1.5em;
 }
 
-.text-columnn-left {
+.text-columnn-right {
     width: 55%;
     float: right;
     padding-top: 2%;
@@ -47,7 +48,7 @@ p.capitalize {
     text-align: center;
     background-image: url(images/foxface.png);
     background-repeat: repeat-x;
-    background-size: 13%;
+    background-size: contain;
     overflow: visible;
 
 }
@@ -99,7 +100,7 @@ nav {
     position: fixed;
     top: 0%;
     width: 100%;
-    background-color: rgb(248, 239, 106);
+    background-color: rgba(248, 239, 106, 0.858);
     padding-top: 2%;
     padding-bottom: 1%;
 }
@@ -136,7 +137,7 @@ a:link {
 }
 
 a:visited {
-    color: rgb(0, 0, 0);
+    color: rgb(57, 117, 173);
 }
 
 a:hover {
@@ -148,4 +149,26 @@ a:active {
 h2.dottedunderline {
     text-decoration: underline dotted;
     text-decoration-thickness: 5px;
+}
+
+@media only screen and (max-width: 600px) {
+    img {
+        width: 100%;
+    }
+    .text-columnn-right {
+        width: 100%;
+        float: none;
+        padding-left: 2%;
+        padding-right: 2%;
+    }
+    .text-column-left {
+        width: 100%;
+        padding-left: 2%;
+        padding-right: 2%;
+        float: none;
+    }
+    h1 {
+        font-size: 300%;
+    }
+    
 }
