--- a/css/styesheet.css
+++ b/css/styesheet.css
@@ -13,6 +13,16 @@ __________________*/
     text-transform: uppercase;
 }
 
+.sticky {
+    position: fixed;
+    position: sticky;
+    top: 0;
+}
+
+.twelve.columns{
+    text-align: center;
+}
+
 /* elements 
 ___________________*/
 
@@ -23,6 +33,8 @@ nav {
     text-align: center;
     padding-top: 2%;
     padding-bottom: 1%;
+    position: relative;
+    z-index: 999;
 }
 nav li {
     list-style: none;
@@ -32,10 +44,16 @@ nav li {
 nav a {
     margin: 2%;
     color: rgb(234, 141, 187);
+    text-decoration: none;
 }
 
 footer {
     text-align: center;
+    clear: both;
+}
+
+hr {
+    clear: both;
 }
 
 h1 {
@@ -53,4 +71,18 @@ body {
     background-color: white;
 }
 
+a:link {
+    color:rgb(234, 141, 187);
+}
+
+a:visited {
+    color: rgb(57, 117, 173);
+}
+
+a:hover {
+   color:  rgb(236, 64, 113)
+}
+a:active {
+    color: rgb(236, 64, 113);
+}
 
