--- a/css/styesheet.css
+++ b/css/styesheet.css
@@ -23,6 +23,25 @@ __________________*/
     text-align: center;
 }
 
+.extrapad {
+    padding-bottom: 4%;
+}
+
+.circle {
+    height: 50px;
+    width: 50px;
+    background-color: rgb(255, 249, 144);
+    border-radius: 10%;
+    animation-name: rectangle;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
+}
+
+.transition{
+    opacity: 80%;
+    transition: opacity 1s;
+}
+
 /* elements 
 ___________________*/
 
@@ -86,3 +105,12 @@ a:active {
     color: rgb(236, 64, 113);
 }
 
+.transition:hover {
+    opacity: 100%;
+}
+
+@keyframes rectangle {
+    0% {width: 50px;}
+    50% {width: 100%;}
+    100% {width: 50px;}
+}
