--- a/360final/css/stylesheet.css
+++ b/360final/css/stylesheet.css
@@ -31,6 +31,15 @@ ____________________________*/
     background-color: rgb(255, 120, 142);
 }
 
+.textoverlap {
+    position: relative;
+}
+
+.topleft {
+    position: absolute;
+    top: 30%;
+    left: 15 px;
+}
 
 /* IDs */
 
@@ -46,8 +55,9 @@ ____________________________*/
 
 #bkgpinkhalf {
     width: 100%;
-    height: 50%;
-    background: rgb(255, 120, 142);
+    height: 100%;
+    background-color: rgb(255, 120, 142);
+    background-image: linear-gradient(to bottom, transparent);
 }
 /*elements
 ____________________________*/
