--- a/360final/css/stylesheet.css
+++ b/360final/css/stylesheet.css
@@ -54,8 +54,20 @@ ____________________________*/
 }
 
 .textmargin{
-    margin-left: 50px !important;
-    margin-right: 50px !important;
+    margin-left: 100px !important;
+    margin-right: 100px !important;
+}
+
+.uppercase {
+    text-transform: uppercase;
+}
+
+.bold {
+    font-weight: 800;
+}
+
+.pinktext {
+    color: rgb(255, 120, 142);
 }
 
 /* IDs */
@@ -87,4 +99,12 @@ body {
 
 img {
     column-width: 200%;
+}
+
+h2 {
+    font-size: 4em;
+}
+
+h4 {
+    font-size: 3em;
 }
